# mafia

./: .ghci  .gitignore  .gitmodules  .mafiaignore  .travis.yml  LICENSE  NOTICE.txt  README  README.md  Setup.hs  ambiata-mafia.cabal  ambiata-mafia.lock-7.10.2  ambiata-mafia.lock-7.8.4  ambiata-mafia.lock-8.0.1  ambiata-mafia.lock-8.0.2  boris-git.toml  boris.toml  cabal  mafia  mafia.cabal  mafia.lock-7.10.2  mafia.lock-7.8.4  mafia.lock-8.0.2  mafia.lock-8.2.2  master.toml  project.cabal  project.submodules
doc/: cabal.md  command-reference.md  installing-cabal.md  installing-ghc.md
docs/: command-reference.md  installing-cabal.md  installing-ghc.md  using-mafia.md
mafia-gc/: mafia-gc.cabal
mafia-gc/main/: mafia-gc.hs
main/: mafia.hs  project.hs
script/: mafia
src/: Mafia.hs  Project.hs
src/Mafia/: Bin.hs  Cabal.hs  Cache.hs  Catch.hs  Error.hs  Flock.hs  Ghc.hs  Git.hs  Hash.hs  Home.hs  Hoogle.hs  IO.hs  Include.hs  Init.hs  Install.hs  Lock.hs  Makefile.hs  P.hs  Package.hs  Path.hs  Process.hs  Project.hs  Sandbox.hs  Script.hs  Shell.hs  Submodule.hs  Tree.hs  Twine.hs
src/Mafia/Cabal/: Constraint.hs  Dependencies.hs  Index.hs  Package.hs  Process.hs  Sandbox.hs  Types.hs  Version.hs
src/Mafia/Options/: Applicative.hs
src/Mafia/Twine/: Async.hs  Parallel.hs  Queue.hs  Snooze.hs
src/Project/: Data.hs  Error.hs
test/: test-cli.hs  test-io.hs  test.hs
test/Test/: Project.hs
test/Test/IO/Mafia/: Chaos.hs  Flock.hs
test/Test/IO/Project/: IO.hs
test/Test/Mafia/: Arbitrary.hs  Corpus.hs  Flock.hs  Hoogle.hs  IO.hs  Main.hs  Package.hs  Process.hs  Script.hs  Tripping.hs
test/Test/Mafia/Cabal/: Constraint.hs  Dependencies.hs  Types.hs
test/Test/Project/: Arbitrary.hs
test/cli/basic-usage/: run
test/cli/core/: runner.sh
test/cli/errors/: run
test/cli/exec/: run
test/cli/exec/trivial/: LICENSE  trivial.cabal  trivial.hs
test/cli/happy/: run
test/cli/hoogle/: run
test/cli/project/: run
test/cli/sandbox-unregister/: run  with-p.cabal  without-p.cabal
test/cli/sandbox-unregister/src/: MafiaTest.hs
test/cli/script/: expected  run
test/cli/shell/: run
