name:                  ambiata-mafia
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              mafia
category:              Development
cabal-version:         >= 1.8
build-type:            Custom
description:           mafia

library
  build-depends:
                      base                            >= 3          && < 5
                    , aeson                           >= 0.8        && < 0.12
                    , async                           >= 2.0        && < 2.2
                    , attoparsec                      >= 0.12       && < 0.14
                    , base16-bytestring               == 0.1.*
                    , bytestring                      == 0.10.*
                    , Cabal                           >= 2.0        && < 2.1
                    , case-insensitive                == 1.2.*
                    , containers                      == 0.5.*
                    , cryptonite                      == 0.15.*
                    , directory                       >= 1.2        && < 1.4
                    , exceptions                      == 0.8.*
                    , filelock                        == 0.1.*
                    , filepath                        == 1.4.*
                    , ghc-prim                        == 0.5.*
                    , monad-loops                     == 0.4.*
                    , memory                          >= 0.12       && < 0.15
                    , optparse-applicative            >= 0.11       && < 0.15
                    , parallel                        == 3.2.*
                    , process                         >= 1.4        && < 1.5
                    , retry                           == 0.7.*
                    , SafeSemaphore                   == 0.10.*
                    , stm                             == 2.4.*
                    , tar                             == 0.4.*
                    , temporary                       == 1.2.*
                    , text                            == 1.2.*
                    , time                            >= 1.4        && < 1.9
                    , time-locale-compat              == 0.1.*
                    , transformers                    >= 0.4        && < 0.6
                    , transformers-bifunctors         == 0.1.*
                    , transformers-either             == 0.0.1
                    , unix                            == 2.7.*

  ghc-options:
                    -Wall

  if impl(ghc >= 8.0)
    ghc-options:
                    -fno-warn-redundant-constraints

  hs-source-dirs:
                    src

  exposed-modules:
                    Mafia.Bin
                    Mafia.Cabal
                    Mafia.Cabal.Constraint
                    Mafia.Cabal.Dependencies
                    Mafia.Cabal.Index
                    Mafia.Cabal.Package
                    Mafia.Cabal.Process
                    Mafia.Cabal.Sandbox
                    Mafia.Cabal.Types
                    Mafia.Cabal.Version
                    Mafia.Cache
                    Mafia.Catch
                    Mafia.Error
                    Mafia.Flock
                    Mafia.Ghc
                    Mafia.Git
                    Mafia.Hash
                    Mafia.Home
                    Mafia.Hoogle
                    Mafia.IO
                    Mafia.Include
                    Mafia.Init
                    Mafia.Install
                    Mafia.Lock
                    Mafia.Makefile
                    Mafia.Options.Applicative
                    Mafia.P
                    Mafia.Package
                    Mafia.Path
                    Mafia.Process
                    Mafia.Script
                    Mafia.Submodule
                    Mafia.Tree
                    Mafia.Twine
                    Mafia.Twine.Async
                    Mafia.Twine.Parallel
                    Mafia.Twine.Queue
                    Mafia.Twine.Snooze
                    Paths_ambiata_mafia

executable mafia
  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    gen

  main-is:
                    ../main/mafia.hs

  other-modules:
                    BuildInfo_ambiata_mafia
                    DependencyInfo_ambiata_mafia

  autogen-modules:
                    BuildInfo_ambiata_mafia
                    DependencyInfo_ambiata_mafia

  build-depends:
                      base
                    , ambiata-mafia
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , directory                       >= 1.2        && < 1.4
                    , filepath                        == 1.4.*
                    , optparse-applicative            >= 0.11       && < 0.15
                    , text                            == 1.2.*
                    , time                            >= 1.4        && < 1.9
                    , time-locale-compat              == 0.1.*
                    , transformers                    >= 0.4        && < 0.6
                    , transformers-bifunctors         == 0.1.*
                    , transformers-either             == 0.0.1

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  other-modules:
                    Test.Mafia.Arbitrary
                    Test.Mafia.Cabal.Constraint
                    Test.Mafia.Cabal.Dependencies
                    Test.Mafia.Cabal.Types
                    Test.Mafia.Hoogle
                    Test.Mafia.Package
                    Test.Mafia.Process

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mafia
                    , QuickCheck                      == 2.8.*
                    , quickcheck-instances            == 0.3.*
                    , text
                    , transformers                    >= 0.4        && < 0.6

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  if impl(ghc >= 8.0)
    ghc-options:
                    -fno-warn-redundant-constraints

  hs-source-dirs:
                    test

  other-modules:
                    Test.IO.Mafia.Chaos
                    Test.IO.Mafia.Flock

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mafia
                    , async                           >= 2.0        && < 2.2
                    , containers                      == 0.5.*
                    , exceptions                      == 0.8.*
                    , QuickCheck                      == 2.8.*
                    , quickcheck-instances            == 0.3.*
                    , temporary                       == 1.2.*
                    , text                            == 1.2.*
                    , transformers                    >= 0.4        && < 0.6
                    , transformers-bifunctors
                    , transformers-either

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-mafia
