name:                  ambiata-mafia
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              mafia
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           project

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-p
                    , either                          >= 4.4.1      && < 4.5
                    , text                            == 1.2.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src gen

  exposed-modules:
                    Paths_ambiata_mafia
                    BuildInfo_ambiata_mafia
                    Project

executable mafia
  ghc-options:
                    -Wall -threaded -O2

  main-is:
                    main/mafia.hs

  build-depends:
                      base
                    , ambiata-mafia
                    , ambiata-p
                    , ambiata-x-optparse
                    , optparse-applicative            == 0.11.*
                    , text


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mafia
                    , ambiata-p
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mafia
                    , ambiata-p
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*
                    , text                            == 1.2.*

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-mafia
