name:                  ambiata-mafia
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              mafia
category:              Development
cabal-version:         >= 1.8
build-type:            Custom
description:           mafia

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-p
                    , ambiata-x-either
                    , async                           == 2.0.*
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , directory                       == 1.2.*
                    , exceptions                      == 0.8.*
                    , filepath                        == 1.4.*
                    , process                         == 1.2.*
                    , tar                             == 0.4.*
                    , text                            == 1.2.*
                    , time                            == 1.4.*
                    , transformers                    == 0.4.*
                    , unix                            == 2.7.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src gen

  exposed-modules:
                    Paths_ambiata_mafia
                    BuildInfo_ambiata_mafia
                    Mafia
                    Mafia.Cabal
                    Mafia.IO
                    Mafia.Path
                    Mafia.Process

executable mafia
  ghc-options:
                    -Wall -threaded -O2

  main-is:
                    main/mafia.hs

  build-depends:
                      base
                    , ambiata-mafia
                    , ambiata-p
                    , ambiata-x-either
                    , ambiata-x-optparse
                    , containers                      == 0.5.*
                    , directory                       == 1.2.*
                    , exceptions                      == 0.8.*
                    , filepath                        == 1.4.*
                    , optparse-applicative            == 0.11.*
                    , text                            == 1.2.*
                    , time                            == 1.4.*
                    , transformers                    == 0.4.*


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mafia
                    , ambiata-p
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mafia
                    , ambiata-p
                    , ambiata-x-either
                    , containers                      == 0.5.*
                    , exceptions                      == 0.8.*
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*
                    , temporary                       == 1.2.*
                    , text                            == 1.2.*
                    , transformers                    == 0.4.*

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-mafia
