name:                  project
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              project
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           project

library
  build-depends:
                      base                            >= 3          && < 5
                    , attoparsec                      == 0.12.*
                    , either                          >= 4.4.1      && < 4.5
                    , p
                    , text

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Paths_project
                    Project
                    Project.Data
                    Project.Error

executable project
  ghc-options:
                    -Wall -threaded -O2

  main-is:
                    main/project.hs

  build-depends:
                      base
                    , project
                    , optparse-applicative            == 0.11.*
                    , p
                    , text
                    , x-optparse


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , project
                    , disorder-core
                    , disorder-corpus
                    , p
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , project
                    , disorder-core
                    , disorder-corpus
                    , p
                    , text
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , project
                    , disorder-core
