name:                  ambiata-project
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              project
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           project

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-p
                    , either                          >= 4.4.1      && < 4.5
                    , text                            == 1.2.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src gen

  exposed-modules:
                    Paths_ambiata_project
                    BuildInfo_ambiata_project
                    Project

executable project
  ghc-options:
                    -Wall -threaded -O2

  main-is:
                    main/project.hs

  build-depends:
                      base
                    , ambiata-project
                    , ambiata-p
                    , ambiata-x-optparse
                    , optparse-applicative            == 0.11.*
                    , text


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-project
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-project
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , text
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-project
                    , ambiata-disorder-core
