name:                trivial
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ambiata
maintainer:          info@ambiata.com
build-type:          Simple
cabal-version:       >=1.10

executable trivial
  default-language:    Haskell2010
  main-is:             trivial.hs
  build-depends:       base                 >= 4.7         && < 5
                     , async


